syntax = "proto3";

option go_package = "./;config_generated";

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

service Config {
    // 更新配置
    rpc SetRpc (SetRequest) returns (google.protobuf.Empty) {}
    // 加载配置
    rpc LoadRpc (google.protobuf.Empty) returns (LoadResponse) {}
}

message Chain {
    message Tron {
        repeated string rpcNodes = 1;
        repeated string httpNodes = 2;
        repeated string apiKeys = 3;
    }
}

message SetRequest {
    map<string, google.protobuf.Any> chains = 1;
    optional int64 expireTime = 2;
    optional string mnemonic = 3;
    optional int64 walletCollectionThreshold = 4;
    optional int64 minGasThreshold = 5;
    optional int64 transferGasAmount = 6;
    map<string, string> collectWallets = 7;
    map<string, string> paymentCurrencies = 8;
}

message LoadResponse {
    map<string, google.protobuf.Any> chains = 1;
    int64 expireTime = 2;
    string mnemonic = 3;
    double walletCollectionThreshold = 4;
    double minGasThreshold = 5;
    double transferGasAmount = 6;
    map<string, string> collectWallets = 7;
    map<string, string> paymentCurrencies = 8;
}